# ChangeLog for net-libs/aqbanking
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/aqbanking/ChangeLog,v 1.42 2007/01/26 07:59:39 hanno Exp $

*aqbanking-2.2.6 (26 Jan 2007)

  26 Jan 2007; Hanno Boeck <hanno@gentoo.org> +aqbanking-2.2.6.ebuild:
  Version bump.

*aqbanking-2.2.5 (17 Jan 2007)

  17 Jan 2007; Hanno Boeck <hanno@gentoo.org> +aqbanking-2.2.5.ebuild:
  Version bump.

  01 Jan 2007; Matti Bickel <mabi@gentoo.org> aqbanking-2.2.1.ebuild:
  ppc stable (bug #149970)

  06 Nov 2006; Hanno Boeck <hanno@gentoo.org> aqbanking-2.2.1.ebuild:
  Fix conditional setting of depend.

  04 Nov 2006; <blubb@gentoo.org> aqbanking-2.2.1.ebuild:
  stable on amd64

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> aqbanking-2.2.1.ebuild:
  Mark 2.2.1 stable on ia64. #149970

  10 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  aqbanking-2.2.1.ebuild:
  Stable on sparc wrt #149970

  09 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  aqbanking-2.2.1.ebuild:
  Stable on x86 wrt bug #149970.

*aqbanking-2.2.1 (08 Sep 2006)

  08 Sep 2006; Hanno Boeck <hanno@gentoo.org> +aqbanking-2.2.1.ebuild:
  Version bump.

  09 Aug 2006; Doug Goldstein <cardoe@gentoo.org> aqbanking-1.6.0_beta.ebuild,
  aqbanking-2.0.0.ebuild, aqbanking-2.1.0.ebuild:
  Fix qt & gtk2 USE flags as per bug #137785

*aqbanking-2.1.0 (16 Jun 2006)

  16 Jun 2006; Hanno Boeck <hanno@gentoo.org> +aqbanking-2.1.0.ebuild:
  Version bump.

*aqbanking-2.0.0 (14 Jun 2006)

  14 Jun 2006; Hanno Boeck <hanno@gentoo.org> +aqbanking-2.0.0.ebuild:
  Version bump.

*aqbanking-1.9.11_rc1 (26 Mar 2006)

  26 Mar 2006; Hanno Boeck <hanno@gentoo.org> +aqbanking-1.9.11_rc1.ebuild:
  Version bump.

*aqbanking-1.9.9_beta (22 Mar 2006)

  22 Mar 2006; Hanno Boeck <hanno@gentoo.org> +aqbanking-1.9.9_beta.ebuild:
  Version bump.

  06 Feb 2006; Aron Griffis <agriffis@gentoo.org>
  aqbanking-1.6.0_beta.ebuild:
  Mark 1.6.0_beta stable on alpha/ia64 #113175
