@@ -5,6 +5,7 @@ DIST aqbanking-1.6.0beta.tar.gz 3712587 RMD160 a32044652a0abffd5aaf2250da45d4418
 DIST aqbanking-2.2.1.tar.gz 3972949 RMD160 35c9b2dc85af1347d3a982eba533c7f1bd18f344 SHA1 39a98cd2ee6fa0afaf0eb5c668fd190904444c26 SHA256 91868dde3fadf9b18ca8681c930bf61a799fcdcd0a9cf8342a04602646fc7b6e
 DIST aqbanking-2.2.5.tar.gz 4093822 RMD160 45f2554ff34265769615ff4fc488a1142785c56b SHA1 9a1ec5be8132252ae25ae12cb3f900bacd13798c SHA256 0bb50482600455988143ac310cdb66732f9e243eb69e4bb7570b2c91f026c469
 DIST aqbanking-2.2.6.tar.gz 4088482 RMD160 3ce908a06f2a26998f9caacad53781fa730a3ad6 SHA1 dd8ff233072291ffe1512d74ea4b423584812859 SHA256 8843955f80875a4de2d2e46b055838108439538d0babab9323f0055650032aa0
+DIST aqbanking-2.2.9.tar.gz 4138463 RMD160 43da31d3ab7d2f2cd5904ffa27327bffb7ef3d1c SHA1 846cf8f48090db0f45670b680d4c3052ec68a965 SHA256 a9249c21afdb9ea961641b3380db87fde94b70f6170c3500ffed3abb93be8336
 EBUILD aqbanking-1.6.0_beta.ebuild 1616 RMD160 673cc97f5f756ede3bfcd3622b06876dd4995f7e SHA1 c4ae7f160e2078f137b0a2b195077d2b0c1156e6 SHA256 5a77a897ca50af0b7dcef2456749d7a03ab30256ff8879451257b0f7657afe1c
 MD5 45ac82c997da7d6f710462940e21008a aqbanking-1.6.0_beta.ebuild 1616
 RMD160 673cc97f5f756ede3bfcd3622b06876dd4995f7e aqbanking-1.6.0_beta.ebuild 1616
@@ -21,10 +22,14 @@ EBUILD aqbanking-2.2.6.ebuild 1623 RMD160 4acc3bee422c7446b9f48d3ddbd2521704ea7e
 MD5 f3d4a8b328a02ff40ef04b2a15f6397a aqbanking-2.2.6.ebuild 1623
 RMD160 4acc3bee422c7446b9f48d3ddbd2521704ea7ed5 aqbanking-2.2.6.ebuild 1623
 SHA256 e2bdecdbddccab33b456d81f5d1c9f78149323916d0422cc725329b6d17ce850 aqbanking-2.2.6.ebuild 1623
-MISC ChangeLog 5103 RMD160 628772fd2d32663fabd34cb3a0c3a0ff99e9592f SHA1 3f8e1e5f12a19a1001d6ebdcdf280df8fce1026b SHA256 089fcf7c6bed8f6198861f934d34473e529e2e183eee19ed4e51990f168f2768
-MD5 7133401e0af12221e90e468af3e2b6a6 ChangeLog 5103
-RMD160 628772fd2d32663fabd34cb3a0c3a0ff99e9592f ChangeLog 5103
-SHA256 089fcf7c6bed8f6198861f934d34473e529e2e183eee19ed4e51990f168f2768 ChangeLog 5103
+EBUILD aqbanking-2.2.9.ebuild 1623 RMD160 01330f5fc2f195d8dd7c3452e78a83c5e3184c14 SHA1 af8b93bfa1716a7b8b5851ecd449583452ba5df8 SHA256 df24565f884b59f9bd71a2f75ef2e07c3d7e0c1824fff7ef8a5a3a087ca180ca
+MD5 a72e0be6527fb1dd7d00280987795b6d aqbanking-2.2.9.ebuild 1623
+RMD160 01330f5fc2f195d8dd7c3452e78a83c5e3184c14 aqbanking-2.2.9.ebuild 1623
+SHA256 df24565f884b59f9bd71a2f75ef2e07c3d7e0c1824fff7ef8a5a3a087ca180ca aqbanking-2.2.9.ebuild 1623
+MISC ChangeLog 5223 RMD160 b84bbe3fda7c0333553fee25f7291efc8a0138e1 SHA1 3c0b54349977947ef8686ef04f72c78e2b86143c SHA256 1c23b712efa3e4305e508bcc970b24bf940b9be5eb842ceeead9b9adf120d93e
+MD5 dd74a57ea8d934b25289e62a0df6207e ChangeLog 5223
+RMD160 b84bbe3fda7c0333553fee25f7291efc8a0138e1 ChangeLog 5223
+SHA256 1c23b712efa3e4305e508bcc970b24bf940b9be5eb842ceeead9b9adf120d93e ChangeLog 5223
 MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 metadata.xml 217
@@ -41,10 +46,13 @@ SHA256 44ecc67cc05b8f97e6278406005510bfd7740b759c268a2102cdfeed0b394acd files/di
 MD5 b0f5a4718fc2343d07e95ae1cc240889 files/digest-aqbanking-2.2.6 250
 RMD160 70656fd3f882d1256655533431f3827448e9bd34 files/digest-aqbanking-2.2.6 250
 SHA256 0726cbcb18d3d3fdab36a53a672d5c040bd77d19f7d4e05993b4f0abc186a8e5 files/digest-aqbanking-2.2.6 250
+MD5 ba3ce96fe364af74ffa36d699b0c0b8c files/digest-aqbanking-2.2.9 250
+RMD160 55d1bc6e1760ac44cc346bb14947d2025cdab602 files/digest-aqbanking-2.2.9 250
+SHA256 299dfcc98c187ffbec5effcafb2eacaffa3c732b5f49624aba6e052f3134b356 files/digest-aqbanking-2.2.9 250
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.1 (GNU/Linux)
+Version: GnuPG v2.0.3 (GNU/Linux)
 
-iD8DBQFFubTnr2QksT29OyARAkBfAJoDK7RLburxQjIyfsiqurhfAyFfaACcDVli
-GLrjFLhI6F0G54M37Xf6g2E=
-=nMGo
+iD8DBQFGEY9qr2QksT29OyARAqNRAKCjOcZtuBelYhZz78cY94klJNgAUQCfZfk1
+NMAV6OEuumr39k2ntW95Z1E=
+=leCG
 -----END PGP SIGNATURE-----
