@@ -1,0 +1,3 @@
+MD5 e531df3a4dee2e5e168e7650d2eec86c aqbanking-2.2.9.tar.gz 4138463
+RMD160 43da31d3ab7d2f2cd5904ffa27327bffb7ef3d1c aqbanking-2.2.9.tar.gz 4138463
+SHA256 a9249c21afdb9ea961641b3380db87fde94b70f6170c3500ffed3abb93be8336 aqbanking-2.2.9.tar.gz 4138463
