@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/aqbanking
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/aqbanking/ChangeLog,v 1.42 2007/01/26 07:59:39 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/aqbanking/ChangeLog,v 1.43 2007/04/02 23:19:22 hanno Exp $
+
+*aqbanking-2.2.9 (02 Apr 2007)
+
+  02 Apr 2007; Hanno Boeck <hanno@gentoo.org> +aqbanking-2.2.9.ebuild:
+  Version bump.
 
 *aqbanking-2.2.6 (26 Jan 2007)
 
